force-app/main/default/objects/Pax__c/Pax__c.object-meta.xml
<CustomObject>
    <label>Pax(NRMA)</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Pax Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pax</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>