force-app/main/default/objects/Pax__c/fields/Awaiting_New_Passport__c.field-meta.xml
<CustomField>
    <fullName>Awaiting_New_Passport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Awaiting New Passport?</label>
    <type>Checkbox</type>
</CustomField>