force-app/main/default/objects/Pax__c/fields/Dietary_Requests__c.field-meta.xml
<CustomField>
    <fullName>Dietary_Requests__c</fullName>
    <label>Dietary Requests</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>