force-app/main/default/objects/Pax__c/fields/Email_EC__c.field-meta.xml
<CustomField>
    <fullName>Email_EC__c</fullName>
    <label>Email(EC)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>