force-app/main/default/objects/Pax__c/fields/First_Name_EC__c.field-meta.xml
<CustomField>
    <fullName>First_Name_EC__c</fullName>
    <label>First Name(EC)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>