force-app/main/default/objects/Pax__c/fields/Last_Name_EC__c.field-meta.xml
<CustomField>
    <fullName>Last_Name_EC__c</fullName>
    <label>Last Name(EC)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>