force-app/main/default/objects/Pax__c/fields/Mobility_Medical_Requests__c.field-meta.xml
<CustomField>
    <fullName>Mobility_Medical_Requests__c</fullName>
    <label>Mobility &amp; Medical Requests</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>