force-app/main/default/objects/Pax__c/fields/NRMA__c.field-meta.xml
<CustomField>
    <fullName>NRMA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NRMA</label>
    <referenceTo>NRMA__c</referenceTo>
    <relationshipName>Pax</relationshipName>
    <type>Lookup</type>
</CustomField>