force-app/main/default/objects/Pax__c/fields/Parent_SFID__c.field-meta.xml
<CustomField>
    <fullName>Parent_SFID__c</fullName>
    <formula>NRMA__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent SFID</label>
    <type>Text</type>
</CustomField>