force-app/main/default/objects/Pax__c/fields/passport_expiry_date__c.field-meta.xml
<CustomField>
    <fullName>passport_expiry_date__c</fullName>
    <label>Passport expiry date</label>
    <length>20</length>
    <type>Text</type>
</CustomField>