force-app/main/default/objects/Pax__c/fields/PAX_waiting_for_new_passport__c.field-meta.xml
<CustomField>
    <fullName>PAX_waiting_for_new_passport__c</fullName>
    <label>PAX waiting for new passport</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>