force-app/main/default/objects/Pax__c/fields/Phone_EC__c.field-meta.xml
<CustomField>
    <fullName>Phone_EC__c</fullName>
    <label>Phone(EC)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>