force-app/main/default/objects/Pax__c/fields/Preferred_Bedding_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Bedding_Configuration__c</fullName>
    <label>Preferred Bedding Configuration</label>
    <length>200</length>
    <type>Text</type>
</CustomField>