force-app/main/default/objects/Pax__c/fields/Relationship_EC__c.field-meta.xml
<CustomField>
    <fullName>Relationship_EC__c</fullName>
    <label>Relationship(EC)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>