force-app/main/default/objects/Pax__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Surname__c</columns>
    <columns>NRMA__c</columns>
    <columns>Passport_Number__c</columns>
    <columns>passport_expiry_date__c</columns>
    <columns>Passport_country_of_issue__c</columns>
    <columns>DOB__c</columns>
    <columns>Nationality__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>